# hashify

./: Cargo.toml  README.md
benches/: phf_bench.rs
src/: large.rs  large_32.rs  lib.rs  tiny.rs
tests/: test.rs
